# api_usecases

./: .gitignore  README.md  WORKFLOW.md  development.ts
.github/workflows/: EXPERIMENT.yml  OLD_ACTION.yml  api_reference_python_sdk_snippets.yml  run_smart_accounts.yml  simple_test.yaml  simple_test__staging.yaml  test_SDK_snippets_v1.yml  test_prod_snippets___prod_api_server___prod_sdk.yml  test_prod_snippets___staging_api_server___latest_sdk.yml  test_prod_snippets___staging_api_server___release_candidate_sdk.yml  test_production_snippets___staging_api_server___latest_sdk.yml  test_production_snippets___staging_api_server___release_candidate_sdk.yml  test_python_sdk_snippets.yml  test_sdk_snippets.yml  test_sdk_snippets__production.yml  test_sdk_snippets__staging.yml  test_sdk_snippets__staging_api__rc_snippets.yml  test_sdk_snippets__staging_api_with_production_snippets.yml  test_snippets.yml  test_tutorials_v1.yml  test_typescript_sdk_snippets.yml  test_usecases.yml  test_usecases_v0.yml  test_usecases_v1.yml
aave_looping/python_example/: .python-version  README.md  pyproject.toml
aave_looping/python_example/src/: main.py
aave_looping/typescript_example/: package.json
aave_looping_ui/: README.md  package.json
aave_looping_ui/.next/: trace
api_fees/: package.json
api_fees/src/: index.ts
api_reference/python_sdk_snippets/: .env.example  Makefile  bundler_quick_start.py  pyproject.toml  run_python_snippets.py
api_reference/python_sdk_snippets/aave/: rate.py
bundler/typescript/: package.json
bundler_examples/: pyproject.toml
compass_agent/: agent.py  answer_types.py  pyproject.toml  requirements.txt  server.py
fireblocks_safe/: package.json
fireblocks_safe/src/: index.ts
fireblocks_zerodev/: .env.example  package.json  tsconfig.json
fireblocks_zerodev/src/: index.ts
fusion-single-chain/: package.json
fusion-single-chain/src/: App.tsx  main.tsx  wagmi.tsx
gas_estimation/: .env.example  README.md  aave_loop_atomic.py  aave_loop_with_MULTICALL.py  gas_estimation_report.json  gas_estimation_report__2025-07-02T09-57-20.json  gas_estimation_report__2025-07-02T10-24-17.json  gas_usage_comparison_experiment.py  gas_usage_report_base.py  infinity_money_glitch.py  lib.py  pyproject.toml  report_bundler.py  report_sequential.py  simple_multicall.py  single_transaction_comparison.py
gas_estimation/bundler_n/: gas_estimation_report__2025-07-02T13-15-20.json  gas_estimation_report__2025-07-02T13-19-22.json  gas_estimation_report__2025-07-02T13-20-09.json  gas_estimation_report__2025-07-02T13-20-58.json  gas_estimation_report__2025-07-02T13-23-41.json  gas_estimation_report__2025-07-02T13-24-28.json  gas_estimation_report__2025-07-02T13-25-25.json  gas_estimation_report__2025-07-02T13-26-15.json  gas_estimation_report__2025-07-02T13-27-04.json  gas_estimation_report__2025-07-02T13-40-26.json  gas_estimation_report__2025-07-02T13-45-37.json  gas_estimation_report__2025-07-02T13-54-49.json
gas_estimation/gas_usage_reports/: gas_estimation_report__2025-07-02T10-27-29.json  gas_estimation_report__2025-07-02T10-33-15.json  gas_estimation_report__2025-07-02T10-52-19.json  gas_estimation_report__2025-07-02T11-16-04.json  gas_estimation_report__2025-07-02T11-29-13.json
gas_estimation/tidy/: 001.py  01.py  03.py  04.py  05.py  06.py  07.py  08.py  09_report_sequential.py  experiment_without_multicall.py  gas_usage_report.py  gas_usage_report_anvil.py  morpho_mystery.py  report_bundler.py  report_sequential.py  report_sequential___BUNDLER.py  report_sequential_simple.py  report_sequential_working_checkpoint.py
gas_estimation/valid_reports/: gas_estimation_report__2025-07-02T11-37-54.json  gas_estimation_report__2025-07-02T11-40-59.json  gas_estimation_report__2025-07-02T11-51-50.json
multicall/: package.json  tsconfig.json
multicall/src/: index.ts
pendle/typescript/: package.json
privy_example/: README.md  package.json
privy_example/.next/: react-loadable-manifest.json
provence_example/: app.json  package.json
provence_example/android/: settings.gradle
provence_example/ios/: Podfile
smart_accounts/: .env  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
smart_accounts/safe/: .prettierrc  package.json
smart_accounts/src/: index.ts
smart_accounts/zerodev/: .gitignore  README.md  package.json
smart_accounts_safe/: package.json  tsconfig.json
smart_accounts_safe/src/: index.ts  new_file.ts
smart_accounts_zerodev/: .prettierrc  package.json
smart_accounts_zerodev/src/: index.ts
test/: main.py  pyproject.toml
v0/compass_agent/: .env.example  .gitignore  README.md  cli.py  eval_run.py  format.sh  pyproject.toml
v0/compass_agent/evals/: eval_helper_functions.py
v0/compass_agent/evals/dataset/compass_api/v0/aave/: aave_tests.yaml
v0/gas_estimation/: .env.example  pyproject.toml
v0/vault_rebalance/: README.md  (+1 more)
v1/aave_looping/python/: .env.example  README.md  pyproject.toml
v1/aave_looping/python/src/: main.py
v1/transaction_bundler/python/: pyproject.toml
v1/transaction_bundler/python/src/: main.py  verify_7702.py
v2/: README.md
vault_rebalance/: Makefile  aave_loop_atomic.py  aave_loop_with_MULTICALL.py  main.py  package.json  pyproject.toml  rebalance.py  rebalance_with_EOA.py  rebalance_with_MULTICALL.py
vault_rebalance_/: package.json
wallet/: README.md  package.json
wallet-earn/: .env.example  README.md  package.json
wallet-earn-v2/: package.json
(+1088 files in other folders)
