[project]
name = "compass-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datamodel-code-generator>=0.27.2",
    "devtools>=0.12.2",
    "fastapi>=0.115.8",
    "jsonref>=1.1.0",
    "langchain",
    "langchain-community>=0.3.16",
    "langchain-compass>=0.3.7",
    "langgraph",
    "langchain-ollama>=0.2.3",
    "notebook>=7.3.2",
    "prompt-toolkit>=3.0.50",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
packages = ["evals"]  # Include your local package folder here


[dependency-groups]
dev = [
    "cryptography>=44.0.0",
    "pyjwt>=2.10.1",
    "pyperclip>=1.9.0",
    "ruff>=0.9.5",
    "docformatter>=1.7.5",
    "pyright>=1.1.393",
    "debugtools>=0.2.0",
]
